* config/h8300/h8300.md (anonymous patterns): Check that 	operands are registers before using REGNO on them.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48545 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-04  Kazu Hirata  <kazu@hxi.com>
+
+	* config/h8300/h8300.md (anonymous patterns): Check that
+	operands are registers before using REGNO on them.
+
 2002-01-03  Roland McGrath  <roland@frob.com>
 
 	* doc/invoke.texi (RS/6000 and PowerPC Options): Add -mcall-gnu.
