--- a/libf2c/ChangeLog
+++ b/libf2c/ChangeLog
@@ -1,3 +1,9 @@
+2002-01-04  Loren J. Rittle  <ljrittle@acm.org>
+
+	* libI77/fio.h (FSEEK): Enforce type of second parameter to be
+	off_t when prototype is missing from system headers for the
+	non-standard function.
+
 2002-01-03  Loren J. Rittle  <ljrittle@acm.org>
 
 	* Makefile.in ($(LIBG2C):): Let libtool decide when to add -lc.
