--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2002-01-04  Loren J. Rittle  <ljrittle@acm.org>
+
+	* g++.old-deja/g++.abi/aggregates.C: Do not skip i?86-*-freebsd*.
+	* g++.old-deja/g++.abi/align.C: Likewise.
+	* g++.old-deja/g++.abi/bitfields.C: Likewise.
+
 2002-01-04  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.dg/20020104-1.c: New test.
