* g++.old-deja/g++.abi/aggregates.C: Corrected last patch: removed 	extra triple that slipped in. 	* g++.old-deja/g++.abi/align.C: Likewise. 	* g++.old-deja/g++.abi/bitfields.C: Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48551 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,12 @@
 2002-01-04  Loren J. Rittle  <ljrittle@acm.org>
 
+        * g++.old-deja/g++.abi/aggregates.C: Corrected last patch: removed
+	extra triple that slipped in.
+        * g++.old-deja/g++.abi/align.C: Likewise.
+        * g++.old-deja/g++.abi/bitfields.C: Likewise.
+
+2002-01-04  Loren J. Rittle  <ljrittle@acm.org>
+
 	* g++.old-deja/g++.abi/aggregates.C: Do not skip i?86-*-freebsd*.
 	* g++.old-deja/g++.abi/align.C: Likewise.
 	* g++.old-deja/g++.abi/bitfields.C: Likewise.
