--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-05  Hans-Peter Nilsson  <hp@bitrange.com>
+
+	* gcc.c-torture/execute/nestfunc-4.c: New test.
+
 2002-01-04  Loren J. Rittle  <ljrittle@acm.org>
 
         * g++.old-deja/g++.abi/aggregates.C: Corrected last patch: removed
