2002-01-02 Andreas Tobler <a.tobler@schweiz.ch>
	* configure.host: Disable the interpreter for Darwin.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48557 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-02 Andreas Tobler <a.tobler@schweiz.ch>
+
+	* configure.host: Disable the interpreter for Darwin.
+
 2002-01-04  Tom Tromey  <tromey@redhat.com>
 
 	* java/lang/Thread.java (stop): No longer synchronized.
