--- a/gcc/doc/invoke.texi
+++ b/gcc/doc/invoke.texi
@@ -589,7 +589,8 @@ in the following sections.
 @gccoptlist{
 -mlibfuncs -mno-libfuncs -mepsilon -mno-epsilon -mabi=gnu @gol
 -mabi=mmixware -mzero-extend -mknuthdiv -mtoplevel-symbols @gol
--melf}
+-melf -mbranch-predict -mreg-stack-fill-bug-workaround @gol
+-mno-branch-predict -mno-reg-stack-fill-bug-workaround}
 
 @emph{IA-64 Options}
 @gccoptlist{
@@ -9716,7 +9717,7 @@ the called function) are seen as registers @code{$0} and up, as opposed to
 the GNU ABI which uses global registers @code{$231} and up.
 
 @item -mzero-extend
-@item -mno-zero-extend
+@itemx -mno-zero-extend
 When reading data from memory in sizes shorter than 64 bits, use (do not
 use) zero-extending load instructions by default, rather than
 sign-extending ones.
@@ -9736,6 +9737,18 @@ code can be used with the @code{PREFIX} assembly directive.
 @item -melf
 Generate an executable in the ELF format, rather than the default
 @samp{mmo} format used by the @command{mmix} simulator.
+
+@item -mbranch-predict
+@itemx -mno-branch-predict
+Use (do not use) the probable-branch instructions, when static branch
+prediction indicates a probable branch.
+
+@item -mreg-stack-fill-bug-workaround
+@itemx -mno-reg-stack-fill-bug-workaround
+Work around (do not work around) an inconsistency in the circular
+register stack mechanism in the @command{mmix} simulator, which
+causes entries in the register stack to not be flushed to memory if
+the instruction causing the fill-up is @code{PUSHJ} or @code{PUSHGO}.
 @end table
 
 @node Code Gen Options
