--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-05  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* doc/cppinternals.texi: Update.
+
 2002-01-05  Hans-Peter Nilsson  <hp@bitrange.com>
 
 	* doc/invoke.texi (Option Summary) <MMIX Options>: Document
