* cfgcleanup.c (try_forward_edges): Allow multiple jump threading.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48563 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Sat Jan  5 11:52:05 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* cfgcleanup.c (try_forward_edges): Allow multiple jump threading.
+
 2002-01-05  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* doc/cppinternals.texi: Update.
