--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-05  Kazu Hirata  <kazu@hxi.com>
+
+	* combine.c: Fix formatting.
+
 2002-01-05  Craig Rodrigues  <crodrigu@bbn.com>
 
 	PR middle-end/1557
