--- a/libjava/testsuite/ChangeLog
+++ b/libjava/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-05  H.J. Lu <hjl@gnu.org>
+
+	* libjava.jni/jni.exp: Add -I.. for generated header.
+
 2001-12-20  Tom Tromey  <tromey@redhat.com>
 
 	For PR java/4766:
