--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,15 @@
+2002-01-05  Richard Henderson  <rth@redhat.com>
+
+	* c-decl.c (c_expand_body): Don't call outlining_inline_function.
+	* integrate.c (output_inline_function): Likewise.
+	* toplev.c (rest_of_compilation): Do it here instead.  Move call
+	to remove_unnecessary_notes after emitting abstract instance.
+	Force an emitted nested function to have its parent emited as well.
+	* dwarf2out.c (loc_descriptor_from_tree): Read mode after checking
+	for null.
+	(rtl_for_decl_location): Do not look at reload data structures
+	before reload has run.
+
 2002-01-05  Kazu Hirata  <kazu@hxi.com>
 
 	* cse.c: Fix formatting.
