--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-05  Richard Henderson  <rth@redhat.com>
+
+        * semantics.c (expand_body): Revert last change.
+
 2002-01-04  Jason Merrill  <jason@redhat.com>
 
 	* class.c (update_vtable_entry_for_fn): Set delta to zero for a
