* cfgcleanup.c (try_forward_edges): Detect infinite loops while         jump threading.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48574 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2002-01-05  Richard Henderson  <rth@redhat.com>
 
+	* cfgcleanup.c (try_forward_edges): Detect infinite loops while
+	jump threading.
+
+2002-01-05  Richard Henderson  <rth@redhat.com>
+
 	* c-decl.c (c_expand_body): Don't call outlining_inline_function.
 	* integrate.c (output_inline_function): Likewise.
 	* toplev.c (rest_of_compilation): Do it here instead.  Move call
