* class.c (compile_resource_file): Update copyright date. 	Constify filename parameter. 	(java-tree.h): Update copyright date. 	(compile_resource_file): Constify filename parameter.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48577 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,10 @@
+2001-01-03  Graham Stott  <grahams@redhat.com>
+
+        * class.c (compile_resource_file): Update copyright date.
+        Constify filename parameter.
+        (java-tree.h): Update copyright date.
+        (compile_resource_file): Constify filename parameter.
+
 2002-01-03  Graham Stott  <grahams@redhat.com>
 
         * gcc/jcf-parse.c: Update copyright date.
