--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-06  Craig Rodrigues  <rodrigc@gcc.gnu.org>
+
+	* doc/install.texi (sparcv9-*-solaris2*): Add documentation.
+
 2002-01-06  Richard Henderson  <rth@redhat.com>
 
 	* reorg.c (emit_delay_sequence): Remove death notes, not merely
