--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-06  Jakub Jelinek  <jakub@redhat.com>
+
+	* objc/objc-act.c (handle_impent): Use assemble_variable to emit
+	__objc_class_name_*.
+
 2002-01-06  Craig Rodrigues  <rodrigc@gcc.gnu.org>
 
 	* doc/install.texi (sparcv9-*-solaris2*): Add documentation.
