--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-06  Craig Rodrigues  <rodrigc@gcc.gnu.org>
+
+	PR c/5279
+	* gcc.c-torture/compile/20020106-1.c: New test.
+
 2002-01-05  Hans-Peter Nilsson  <hp@bitrange.com>
 
 	* gcc.c-torture/execute/nestfunc-4.c: New test.
