--- a/maintainer-scripts/ChangeLog
+++ b/maintainer-scripts/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-06  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* update_web_docs (contrib_file): Remove.
+	Also removing special handling of thanks.html.
+
 2001-12-17  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* update_web_docs: Use makeinfo --html instead of texi2html.
