2002-02-06  Aldy Hernandez  <aldyh@redhat.com>
        * config.gcc: Add support for --enable-altivec.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48591 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-06  Aldy Hernandez  <aldyh@redhat.com>
+
+        * config.gcc: Add support for --enable-altivec.
+
 2002-01-06  Craig Rodrigues  <rodrigc@gcc.gnu.org>
 
 	* emit-rtl.c (gen_highpart): Add check for NULL_RTX.
