--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-07  Graham Stott  <grahams@redhat.com>
+
+	* combine.c (combine_instructions): Replace XEXP (links, 0)
+	with link.
+
 2002-01-06  H.J. Lu <hjl@gnu.org>
 
 	* cfgcleanup.c (thread_jump): Fix 2 typos.
@@ -326,11 +331,11 @@ Fri Jan  4 11:45:05 2002  Jeffrey A Law  (law@redhat.com)
 
 	* mkconfig.sh: Output to config.h, hconfig.h and tconfig.h
 	forward defs for struct tags rtx_def, union_tree, rtvec_def
-	also output corresponding typedefs for rtxm, tree, and rtvcec.
+	also output corresponding typedefs for rtx, tree, and rtvec.
 
 	* system.h: Move forward defs for struct tags rtx_def, union_tree,
 	rtvec_def along with corresponding typedefs for rtx, tree, and
-	rtvcec to config.h, hconfig.h, tconfig.h
+	rtvec to config.h, hconfig.h, tconfig.h.
 
 2002-01-03  Graham Stott  <grahams@redhat.com>
 
