--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2002-01-07  Graham Stott  <grahams@redhat.com>
 
+	* diagnostic.h: Update copyright date.
+	(output_buffer_state): Add parenthesis.
+	(output_buffer_format_args): Likewise.
+
 	* combine.c (combine_instructions): Replace XEXP (links, 0)
 	with link.
 
